# MicroRacer

./: .gitignore  .unibeautifyrc.json  Base_model.py  Pipfile  SACModel.py  pyproject.toml  race.py  requirements.txt
asperti_models/: DDPG.py  DDPG2.py  DSAC.py  PPO.py  SAC.py  TD3.py  tracks.py
src/: Base_model.py  PPO_model.py  SAC_model.py  TD3_model.py  race.py  tracks.py
src/.pyxbld/lib.macosx-10.9-universal2-cpython-39/: lidar.cpython-39-darwin.so.reload1
src/PPO/PPO_weights/PPO_actor_model_car/: fingerprint.pb  saved_model.pb
src/PPO/PPO_weights/PPO_critic_model_car/: fingerprint.pb  saved_model.pb
src/SAC/SAC_weights/sac_actor_model_car/: fingerprint.pb  saved_model.pb
src/SAC/SAC_weights/sac_critic2_model_car/: fingerprint.pb  saved_model.pb  (+1 more)
weights/custom_sac_actor_model_car/variables/: variables.data-00000-of-00001  variables.index
weights/custom_sac_critic2_model_car/: fingerprint.pb
weights/custom_sac_critic_model_car/: keras_metadata.pb
weights/custom_sac_critic_model_car/variables/: variables.data-00000-of-00001
weights/ppo_actor_model_car/: fingerprint.pb  keras_metadata.pb  saved_model.pb
weights/ppo_actor_model_car/variables/: variables.data-00000-of-00001  variables.index
weights/ppo_critic_model_car/: fingerprint.pb  keras_metadata.pb  saved_model.pb
weights/ppo_critic_model_car/variables/: variables.data-00000-of-00001  variables.index
weights/sac_actor_model_car/: keras_metadata.pb
weights/sac_critic2_model_car/: saved_model.pb
weights/sac_critic2_model_car/variables/: variables.data-00000-of-00001  variables.index
(+27 files in other folders)
